     that the client left before the host uploaded the new scenarion, this 
     has been fixed
   * when joining a MP game the recall list wasn't loaded which leads to
     OOS errors in campaigns (bug #10624)
   * :droid can now use the additional parameters on & off to enable/disable
     the AI status of a side instead of toggle it (FR #9676)
 * sound:
   * timer bell in MP starts when there are 20 seconds left and fades in
     gradually for 10 seconds (fr #10559)
   * fixed timer bell not always playing (bug #10559)
   * it was possible to add the same track to the playlist twice which
     could lead to an infinite loop (bug #10112)
 * units:
   * balancing changes:
     * increased the XP requirement of the Vampire Bat from 14 to 22
     * decreased the HP of the Vampire Bat from 17 to 16
 * user interface
   * the apple key works as shortcut modifier again (bug #10586)
   * made "Show lobby joins of friends only" the default preference
   * new menu option added to save replays manually
   * show damage statistics for the current turn in the statistics window
 * WML engine:
   * new tag [filter_vision] for Standard Unit Filter
   * it is now possible to play [sound] repeatedly using a "repeat" attribute
   * Added boolean variable disallow_observers= to side defination
   * Random factions can be defined on a subset of the non-random faction
    (FR #10600)
 * miscellaneous and bug fixes:
   * set the default resistance to 100 (no resistance) instead of 0 (immune)
     (bug #10661)
   * when loading a unit some traits didn't get applied correctly but got
     fixed in a later state. This could lead to some units not leveling 
     properly (bug #10304)
   * validate vector access for colours (bug #10622)
   * Fixed OOS on unit advancement if wml had battle/die events (bug #10590)
   * added serveral fixes to compile with Sun Studio compiler (patch #911)
   * bumped autoconf version requirement to 2.60 since it's needed for the
     boost tests (bug #10636)